@@ -1003,23 +1003,40 @@ bool LFSWM2_clientClass::LFSWM2_doFrameMoveEvents(XEvent *e)
 									lasttime=ee.xmotion.time;
 									XMoveWindow(this->mainClass->display,this->frameWindow,this->frameWindowRect.x+xdiff,this->frameWindowRect.y+ydiff);
 								}
-	
+
 							if((ee.xbutton.x_root<20) && (direction==0))
 								{
 									this->onDesk=this->mainClass->LFSWM2_getLowerDesktop(this->onDesk);
-									this->mainClass->LFSWM2_setCurrentDesktop(this->onDesk);
-									XWarpPointer(this->mainClass->display,None,None,0,0,0,0,this->mainClass->displayWidth-50,0);
-									direction=-1;
-									ee.xbutton.x_root=100000;
+									this->mainClass->LFSWM2_setCurrentDesktop(this->onDesk,true,true);
 									this->mainClass->mainWindowClass->LFSWM2_setProp(this->contentWindow,this->mainClass->atomshashed.at(LFSTK_UtilityClass::LFSTK_hashFromKey("_NET_WM_DESKTOP")),XA_CARDINAL,32,&this->onDesk,1);
+									XWarpPointer(this->mainClass->display,None,None,0,0,0,0,this->mainClass->displayWidth-50,0);
+									XSync(this->mainClass->display,true);
+									this->mainClass->mainEventClass->LFSWM2_restack();
+									LFSWM2_clientClass	*rcc;
+									for(long unsigned j=0;j<this->mainClass->mainWindowClass->windowIDList.size();j++)
+										{
+											rcc=this->mainClass->mainWindowClass->LFSWM2_getClientClass(this->mainClass->mainWindowClass->windowIDList.at(j));
+											if(rcc!=NULL)
+												this->mainClass->mainWindowClass->LFSWM2_refreshFrame(rcc,NULL);
+										}
+									
 								}
-							else 	if((ee.xbutton.x_root>this->mainClass->displayWidth-20) && (direction==1))
+							else if((ee.xbutton.x_root>this->mainClass->displayWidth-20) && (direction==1))
 								{
 									this->onDesk=this->mainClass->LFSWM2_getHigherDesktop(this->onDesk);
-									this->mainClass->LFSWM2_setCurrentDesktop(this->onDesk);
-									XWarpPointer(this->mainClass->display,None,None,0,0,0,0,(-this->mainClass->displayWidth-50),0);
-									ee.xbutton.x_root=-1;
+									this->mainClass->LFSWM2_setCurrentDesktop(this->onDesk,true,true);
 									this->mainClass->mainWindowClass->LFSWM2_setProp(this->contentWindow,this->mainClass->atomshashed.at(LFSTK_UtilityClass::LFSTK_hashFromKey("_NET_WM_DESKTOP")),XA_CARDINAL,32,&this->onDesk,1);
+									XWarpPointer(this->mainClass->display,None,None,0,0,0,0,(-(this->mainClass->displayWidth)+50),0);
+									XSync(this->mainClass->display,true);
+									this->mainClass->mainEventClass->LFSWM2_restack();
+									LFSWM2_clientClass	*rcc;
+									for(long unsigned j=0;j<this->mainClass->mainWindowClass->windowIDList.size();j++)
+										{
+											rcc=this->mainClass->mainWindowClass->LFSWM2_getClientClass(this->mainClass->mainWindowClass->windowIDList.at(j));
+											if(rcc!=NULL)
+												this->mainClass->mainWindowClass->LFSWM2_refreshFrame(rcc,NULL);
+										}
+									
 								}
 						}
 						lastx=ee.xbutton.x_root;
